--- a/themes/minimal/layouts/index.html
+++ b/themes/minimal/layouts/index.html
@@ -3,6 +3,7 @@
 <main>
 
     <div class="intro">
+        {{ with .Site.Params.profilePic }} <img class="profile" src="{{ . }}"> {{ end }}
 
         <h1>{{ .Site.Title }}</h1>
 
