oops... didn't get all the links in partials

--- a/themes/minimal/layouts/partials/list-item.html
+++ b/themes/minimal/layouts/partials/list-item.html
@@ -10,7 +10,7 @@
 
     {{ else }}
 
-        <h4><a href="https://github.com/{{ .Site.Params.githubUsername }}/{{ .Params.repo }}/">{{ .Title }}</a></h4>
+        <h4>{{ .Title }}</h4>
 
         <h5>{{ .Description }}</h5>
 
