--- a/themes/minimal/static/css/main.css
+++ b/themes/minimal/static/css/main.css
@@ -106,3 +106,18 @@ td:nth-child(1) {
 td:nth-child(1n+0) {
   padding-right: 10px;
 }
+
+.google-maps {
+        position: relative;
+        padding-bottom: 75%;
+        height: 0;
+        overflow: hidden;
+}
+    
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
