--- a/themes/minimal/static/css/main.css
+++ b/themes/minimal/static/css/main.css
@@ -121,3 +121,11 @@ td:nth-child(1n+0) {
     width: 100%;
     height: 100%;
 }
+
+table {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
